src/other/mico-2.3.12/test/idl/error/expected-stderr-case9.idl
case9.idl:8: identifier 'a' defined twice in this scope
